--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,4 @@ spring.datasource.username = smitsql
 spring.datasource.password = Smit@1234
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
