--- a/UserManagement/src/main/resources/application-dev.properties
+++ b/UserManagement/src/main/resources/application-dev.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
+get.all.prescription.info.api.url=http://localhost:8083/api/{profileId}/all-prescriptions
+get.prescription.info.api.url=http://localhost:8083/api/{profileId}/prescription/{prescriptionId}
+delete.prescription.info.api.url=http://localhost:8083/api/{profileId}/prescription/{prescriptionId}/delete
+delete.all.prescription.info.api.url=http://localhost:8083/api/{profileId}/prescription/delete
